--- a/tategaki.css
+++ b/tategaki.css
@@ -14,7 +14,7 @@ h1#site_title {
 	margin: 0 auto;
 	border-radius: 10px;
 }
-input#title {
+input#file_title {
 	background-color: #F0FFF0;
 	font-size: 20px;
 	position: fixed;
