--- a/tategaki.css
+++ b/tategaki.css
@@ -1,5 +1,6 @@
 body {
-	background-color: #FFFACD;
+	/*background-color: #FFFACD;*/
+	background-color: rgba(245,245,245,.8);
 }
 h1#site_title {
 	background-color: rgba(0,255,255,.8);
@@ -17,13 +18,13 @@ h1#site_title {
 input#file_title {
 	background-color: #F0FFF0;
 	font-size: 20px;
-	position: fixed;
-	top: 30px;
-	left: 16%;
-	margin:0 auto;
+	position: relative;
+	top: 0px;
+	left: 0px;
 	border-radius: 5px;
 	text-align: center;
 	border-color: rgba(255,127,80,.6);
+	display: block;
 }
 input#command {
 	position: fixed;
@@ -35,15 +36,15 @@ input#command {
 }
 #app_container {
 	/*background-color: rgba(165,42,42,.7);*/
-	background-color: #FFFACD;
+	/*background-color: #FFFACD;*/
 	background-color: rgba(245,245,245,.8);
-	border: 1px gray dashed;
+	/*border: 1px gray dashed;*/
 	width: 100%;
-	height: 100%;
-	position: fixed;
-	top: 25px;
-	left: 180px;
+	position: absolute;
+	top: 50px;
+	left: 0px;
 	right: 0px;
+	bottom: 0px;
 	margin: 0 auto;
 	text-align: center;
 }
@@ -64,6 +65,7 @@ input#command {
 	background-color: yellow;
 	position: absolute;
 	bottom: 0;
+	left: 0px;
 	width: 100%;
 	text-align: center;
 	z-index: 7;
@@ -89,7 +91,7 @@ menu[type="toolbar"] {
 	/*max-width: 1400px;*/
 	height: 750px;
 	position: relative;
-	top: 10%;
+	top: 0px;
 	right: 0px;
 	background-color: yellowgreen;
 	overflow: auto;
@@ -102,7 +104,8 @@ menu[type="toolbar"] {
 	float: right;
 	position: relative;
 	margin: 0 0 0 0;
-	top: 20px;
+	/*top: 20px;*/
+	top: 5px;
 	right: 20px;
 	border-top: 2px grey solid;
 	border-bottom: 2px grey solid;
@@ -244,6 +247,7 @@ menu[type="toolbar"] {
 	background-color: rgba(211,211,211,.8);
 	z-index: 10;
 	box-shadow: 3px 2px;
+	display: none;
 }
 .input_buffer .vertical_character {
 	left: 0px;
@@ -253,8 +257,8 @@ menu[type="toolbar"] {
 	padding-top: 3px;
 }
 button {
-	width: 50px;
-	height: 20px;
+	display: table-cell;
+	vertical-align: middle;
 }
 .button_container {
 	display: inline;
@@ -299,15 +303,17 @@ button {
 	background-color: yellow;
 }
 .file_list {
-	position: fixed;
-	top: 25px;
+/*
+	position: absolute;
+	top: 0px;
 	left: 0px;
+	bottom: 0px;
 	width: 15%;
-	height: 100%;
 	text-align: left;
 	background-color: #B0C4DE;
 	padding: 10px 10px 10px 10px;
-	overflow: auto;
+	/*overflow: auto;*/
+*/
 }
 .file_name {
 	color: blue;
