--- a/tategaki-character-decolation.css
+++ b/tategaki-character-decolation.css
@@ -21,3 +21,43 @@ span.decolation-font-big {
 span.decolation-font-small {
 	font-size: 15px;
 }
+.decolation-font-bold{
+	font-weight: bold;
+}
+.decolation-font-italic {
+	font-style: italic;
+}
+#palette {
+	width: 100%;
+	/* height: 500px;           */
+	position: fixed;
+	/* bottom: 0px;             */
+	/* right: 0px;              */
+	/* background-color: green; */
+	top: 40px;
+}
+#palette .navbar-btn{
+	/* padding: 0px; */
+	margin-top: 0px;
+	margin-bottom: 0px;
+}
+#palette a{
+	/* padding: 0px; */
+	margin-top: 0px;
+	margin-bottom: 0px;
+}
+#select-color {
+	/*
+	opacity: 0;
+	*/
+}
+.select-red {
+	/* display: inline-block; */
+	color: white;
+	background-color: red;
+}
+.select-blue {
+	/* display: inline-block; */
+	color: white;
+	background-color: blue;
+}
