--- a/tategaki.css
+++ b/tategaki.css
@@ -1,4 +1,4 @@
-body {
+html,body {
 	/*background-color: #FFFACD;*/
 	background-color: rgba(245,245,245,.8);
 }
@@ -35,14 +35,14 @@ input#command {
 	z-index: 50;
 }
 #app-container {
-	background-color: rgba(165,42,42,.7);
-	/*background-color: #FFFACD;*/
-	/*background-color: rgba(245,245,245,.8);*/
+	/* background-color: rgba(165,42,42,.7); */
+	/* background-color: #FFFACD;            */
+	background-color: rgba(245,245,245,.8);
 	/*border: 1px gray dashed;*/
 	width: 85%;
 	height: 90%;
 	position: absolute;
-	top: 50px;
+	top: 80px;
 	left: 0px;
 	right: 0px;
 	bottom: 0px;
@@ -64,7 +64,7 @@ input#command {
 }
 .doc-info {
 	background-color: yellow;
-	position: absolute;
+	position: fixed;
 	bottom: 0;
 	left: 0px;
 	width: 100%;
@@ -93,9 +93,9 @@ menu[type="toolbar"] {
 	cursor: vertical-text;
 	top: 0px;
 	right: 0px;
-	background-color: yellowgreen;
-	background-image: url(img/old-paper02-768x480.jpg);
+	background-color: white;
 	/*
+	background-image: url(img/old-paper02-768x480.jpg);
 	background-image: url(img/gatag-00006130.png);
 	background-position: 20% 20%;
 	display: table;
@@ -104,7 +104,7 @@ menu[type="toolbar"] {
 	margin: 0 auto;
 	overflow: visible;
 	z-index: 5;
-	padding: 10px 10px;
+	padding: 2.5% 2.5% 2.5% 2.5%;
 	border: 1px solid #222;
 	box-shadow: 0 1px 0 rgba(255,255,255,0.3) inset,
 	0 0 5px rgba(0,0,0,0.3) inset,
@@ -144,6 +144,9 @@ menu[type="toolbar"] {
 	border-bottom: 2px grey solid;
 
 	float: right;
+	/* transform: rotate(90deg); */
+	height: 90%;
+	margin-top: 2.5%;
 }
 .vertical-row {
 	/*
@@ -151,8 +154,10 @@ menu[type="toolbar"] {
 	 */
 	overflow: hidden;
 	border: 1px gray dashed;
+	/* width: 675px;  */
+	/* height: 25px;  */
 	width: 25px;
-	height: 675px;
+	height: 100%;
 	position: relative;
 	color: black;
 	padding: 0 0 0 0;
@@ -162,17 +167,20 @@ menu[type="toolbar"] {
 	float: right;
 	display: table-cell;
 	margin: auto 0;
+
+	/* transform: rotate(90deg); */
 }
 .vertical-char{
 	border: 1px yellowgreen dashed;
 	vertical-align: middle;
 	position: relative;
 	right: 2px;
-	left: 5px;
+	left: 3px;
 	width: 20px;
 	height: 20px;
 
 	display: table-column;
+	/* transform: rotate(90deg); */
 	float: left;
 	clear: left;
 }
@@ -353,9 +361,21 @@ menu[type="toolbar"] {
 	-webkit-box-shadow: 4px 4px 0 0 rgba(0,0,0,0.2);
 }
 .alphabet {
-	-ms-text-combine-horizontal: all;
-	-webkit-text-combine: horizontal;
-	text-combine-upright: all;
+	/* -ms-text-combine-horizontal: all; */
+	/* -webkit-text-combine: horizontal; */
+	/* text-combine-upright: all;        */
+	padding-left: 8px;
+	padding-bottom: 2px;
+}
+.input-buffer .alphabet{
+	padding-left: 5px;
+}
+.suzi {
+	padding-left: 6px;
+}
+.yoin {
+	padding-left: 5px;
+	bottom: 5px;
 }
 .input-buffer .vertical-char {
 	left: 0px;
@@ -432,10 +452,10 @@ button {
 .alternative-focus {
 	background-color: white;
 }
-.input_buffer > .vertical-char.selectPhrase {
+#input_buffer > .vertical-char.selectPhrase {
 	background-color: yellow;
 }
-.file-list {
+#file-list {
 /*
 	position: absolute;
 	top: 0px;
@@ -482,5 +502,5 @@ button {
 	display: block;
 }
 .navbar-default {
-	height: 50px;
+	height: 40px;
 }
