--- a/tategaki.css
+++ b/tategaki.css
@@ -15,7 +15,7 @@ h1#site-title {
 	margin: 0 auto;
 	border-radius: 10px;
 }
-input#file-title {
+#file-title {
 	background-color: #F0FFF0;
 	font-size: 20px;
 	position: relative;
@@ -26,7 +26,7 @@ input#file-title {
 	border-color: rgba(255,127,80,.6);
 	display: block;
 }
-input#command {
+#command {
 	position: fixed;
 	bottom: 0px;
 	left: 0px;
@@ -39,7 +39,7 @@ input#command {
 	/* background-color: #FFFACD;            */
 	background-color: rgba(245,245,245,.8);
 	/*border: 1px gray dashed;*/
-	width: 85%;
+	width: 1800px;
 	height: 90%;
 	position: absolute;
 	top: 80px;
@@ -91,7 +91,7 @@ menu[type="toolbar"] {
 	/*width: 85%;*/
 	/*max-width: 1400px;*/
 	cursor: vertical-text;
-	top: 0px;
+	top: -15px;
 	right: 0px;
 	background-color: white;
 	/*
@@ -102,7 +102,7 @@ menu[type="toolbar"] {
 	margin:auto auto;
 	*/
 	margin: 0 auto;
-	overflow: visible;
+	overflow: hidden;
 	z-index: 5;
 	padding: 2.5% 2.5% 2.5% 2.5%;
 	border: 1px solid #222;
@@ -114,9 +114,11 @@ menu[type="toolbar"] {
 	text-shadow: 0px 1px 2px #111111;
 	*/
 
-	height: 90%;
+	/* height: 90%; */
+	height: 825px;
+	width: 1200px;
 	position: relative;
-	display:table;
+	/* display:table; */
 	/*
 	width: 90%;
 	height: 85%;
@@ -133,69 +135,85 @@ menu[type="toolbar"] {
 	text-combine-upright: all;
 	*/
 }
+/* #vertical-draft {          */
+/* 	transform: rotate(90deg); */
+/* 	position: relative;       */
+/* 	top: 250px;               */
+/* 	left: 650px;              */
+/* 	height: 1000px;           */
+/* 	width: 700px;             */
+/* }                          */
 .vertical-paragraph {
 	/* border: 1px red dashed; */
-	position: relative;
-	margin: 0 0 0 0;
+	/* position: relative; */
+	/* margin: 0 0 0 0; */
 	/*top: 20px;*/
-	top: 5px;
-	right: 20px;
-	border-top: 2px grey solid;
-	border-bottom: 2px grey solid;
+	/* top: 5px;                      */
+	/* right: 20px;                   */
+	/* border-top: 2px grey solid;    */
+	/* border-bottom: 2px grey solid; */
 
-	float: right;
+	/* float: right; */
 	/* transform: rotate(90deg); */
-	height: 90%;
-	margin-top: 2.5%;
+	/* height: 90%; */
+	/* margin-top: 2.5%; */
+	overflow: visible;
 }
 .vertical-row {
 	/*
 	height: 95%;
 	 */
-	overflow: hidden;
+	/* overflow: hidden; */
 	border: 1px gray dashed;
 	/* width: 675px;  */
 	/* height: 25px;  */
-	width: 25px;
-	height: 100%;
+	/* width: 25px; */
+	/* height: 100%; */
 	position: relative;
 	color: black;
 	padding: 0 0 0 0;
 	text-align: left;
-	overflow: hidden;
+	/* overflow: hidden; */
 
-	float: right;
-	display: table-cell;
+	/* float: right; */
+	/* display: table-cell; */
 	margin: auto 0;
+	width: 800px;
+	height:25px;
 
 	/* transform: rotate(90deg); */
 }
 .vertical-char{
-	border: 1px yellowgreen dashed;
-	vertical-align: middle;
+	border: 1px rgba(0,0,0,0) dashed;
+	/* vertical-align: middle; */
 	position: relative;
-	right: 2px;
-	left: 3px;
-	width: 20px;
+	/* right: 2px; */
+	/* left: 3px; */
+	width: 18px;
 	height: 20px;
 
-	display: table-column;
+	/* display: table-column; */
 	/* transform: rotate(90deg); */
-	float: left;
-	clear: left;
+	/* float: left; */
+	/* clear: left; */
+	transform: rotate(-90deg);
 }
 #vertical-draft > .vertical-paragraph > .vertical-row {
 	display: none;
 	overflow: visible;
+	white-space: nowrap;
+	border-left: 2px grey solid;
+	border-right: 2px grey solid;
 }
 #vertical-draft .vertical-char {
 	display: none;
 }
 #vertical-draft > .vertical-paragraph > .vertical-row.display-row {
 	display: block;
+	transform:rotate(90deg);
 }
 #vertical-draft .vertical-row > .vertical-char.display-char {
-	display: inline;
+	display: inline-block;
 }
 #vertical-draft .EOL.vertical-char{
 	/* border: 1px gray dashed; */
@@ -205,10 +223,10 @@ menu[type="toolbar"] {
 	clear: left;
 	left: 5px;
 	 */
-	position: relative;
-	width: 20px;
-	height: 20px;
-	display: inline;
+	/* position: relative; */
+	/* width: 20px;        */
+	/* height: 20px;       */
+	/* display: inline;    */
 }
 .cursor{
 	border-top: 1px black solid;
@@ -219,18 +237,40 @@ menu[type="toolbar"] {
 	left: 5px;
 	position: relative;
 	*/
-	width: 20px;
-	height: 20px;
+	/* width: 20px; */
+	/* height: 20px; */
+
+	-webkit-animation-name: blinking-cursor;
+	-webkit-animation-duration: 1s;
+	-webkit-animation-timing-function: linear;
+	-webkit-animation-delay: .1;
+	-webkit-animation-iteration-count: infinite;
 }
-.cursor-row::before {
-	content: '';
-	position: absolute;
-	background-color: grey;
-	width: 20px;
-	height: 5px;
-	top: -12px;
-	right: 3px;
+@-webkit-keyframes blinking-cursor {
+	0%{
+	border-top: 1px black solid;
+	}
+	50%{
+	border-top: 1px rgba(0,0,0,0) dashed;
+	}
 }
+@-webkit-keyframes blinking-cursor-left {
+	0%{
+	border-left: 1px black solid;
+	}
+	50%{
+	border-left: 1px rgba(0,0,0,0) dashed;
+	}
+}
+/* .cursor-row::before {    */
+/* 	content: '';            */
+/* 	position: absolute;     */
+/* 	background-color: grey; */
+/* 	width: 20px;            */
+/* 	height: 5px;            */
+/* 	top: -12px;             */
+/* 	right: 3px;             */
+/* }                        */
 .vertical-dot {
 	position: relative;
 	top: -10px;
@@ -251,34 +291,40 @@ menu[type="toolbar"] {
 	height: 5px;
 }
 .character-line {
-	transform: rotate(90deg);
-	top: 3px;
+	transform: none;
+	/* top: 3px; */
+	-webkit-animation-name: blinking-cursor-left;
+	left: 5px;
 }
 .character-line.cursor {
 	border-top: 1px yellowgreen dashed;
 	border-left: 1px black solid;
 }
 .vertical-before-bracket {
-	transform: rotate(90deg);
+	/* transform: rotate(90deg); */
+	transform: none;
 	position: relative;
-	top: 12px;
-	left: 8px;
+	/* top: 12px; */
+	/* left: 8px; */
+	padding-left: 10px;
+	padding-bottom: 8px;
 }
 .vertical-after-bracket {
-	transform: rotate(90deg);
+	/* transform: rotate(90deg); */
+	transform: none;
 	position: relative;
 	left: 3px;
-	top: 2px;
+	/* top: 2px; */
 }
-.cursor.vertical-before-bracket::before{
-	content: '';
-	transform: rotate(-90deg);
-	border-top: 1px black solid;
-	position: absolute;
-	top: 10px;
-	right: 20px;
-	width: 20px;
-}
+/* .cursor.vertical-before-bracket::before{ */
+/* 	content: '';                            */
+/* 	transform: rotate(-90deg);              */
+/* 	border-top: 1px black solid;            */
+/* 	position: absolute;                     */
+/* 	top: 10px;                              */
+/* 	right: 20px;                            */
+/* 	width: 20px;                            */
+/* }                                        */
 .decolation-font-big > .cursor.vertical-before-bracket::before{
 	content: '';
 	transform: rotate(-90deg);
@@ -289,35 +335,42 @@ menu[type="toolbar"] {
 	width: 45px;
 }
 .vertical-before-bracket.cursor {
-	border-top: 1px yellowgreen dashed;
+	border-top: 1px rgba(0,0,0,0) dashed;
+	-webkit-animation-name: blinking-cursor-left;
 }
-.cursor.vertical-after-bracket::before{
-	content: '';
-	transform: rotate(-90deg);
-	border-top: 1px black solid;
-	position: absolute;
-	top: 7px;
-	right: 9px;
-	width: 20px;
-}
+/* .cursor.vertical-after-bracket::before{ */
+/* 	content: '';                           */
+/* 	transform: rotate(-90deg);             */
+/* 	border-top: 1px black solid;           */
+/* 	position: absolute;                    */
+/* 	top: 7px;                              */
+/* 	right: 9px;                            */
+/* 	width: 20px;                           */
+/* }                                       */
 .vertical-after-bracket.cursor {
-	border-top: 1px yellowgreen dashed;
+	/* border-top: 1px yellowgreen dashed; */
+	border-top: 1px rgba(0,0,0,0) dashed;
+	-webkit-animation-name: blinking-cursor-left;
 }
 #vertical-draft > .vertical-paragraph > .vertical-row:first-child {
 }
 .vertical-row.page-break {
-	border-right: 2px grey solid;
+	border-top: 2px grey solid;
 }
 .vertical-row.page-last-row {
 }
+.page-last-row + .page-break {
+	border-top: 1px rgba(0,0,0,0) solid;
+}
 .page-last-row {
-	border-left: 2px grey solid;
+	/* border-left: 2px grey solid; */
 }
 #date {
 	clear: right;
 	z-index: 10;
 }
 .input-buffer {
+	/* color: blue; */
 	width: 20px;
 	position: fixed;
 	/*
@@ -360,11 +413,70 @@ menu[type="toolbar"] {
 	-moz-box-shadow: 4px 4px 0 0 rgba(0,0,0,0.2);
 	-webkit-box-shadow: 4px 4px 0 0 rgba(0,0,0,0.2);
 }
+.convert-view {
+	/* background: rgba(0,0,0,.1); */
+	width: 180px;
+	z-index: 0;
+	position: fixed;
+}
+.convert-view[data-alternativeList="select"]{
+	z-index: 10;
+	/* background-color: grey; */
+}
+.convert-view:before, .convert-view:after {
+	position: absolute;
+	content: "";
+	width: 100%;
+	height: 100%;
+}
+.convert-view:before {
+	top: 0;
+	left: 0;
+	z-index: -10;
+	background: #f5f5f5;
+}
+.convert-view:after {
+	top: 4px;
+	left: 4px;
+	z-index: -20;
+	background: rgba(0,0,0,0.2);
+	box-shadow: 4px 4px 0 0 rgba(0,0,0,0.2);
+	-moz-box-shadow: 4px 4px 0 0 rgba(0,0,0,0.2);
+	-webkit-box-shadow: 4px 4px 0 0 rgba(0,0,0,0.2);
+}
+.convert-view > .vertical-row {
+	border: none;
+	/* width: 30px; */
+	float: right;
+	overflow: hidden;
+	height: auto;
+	width: auto;
+	/*
+	-webkit-writing-mode: vertical-rl;
+	-ms-writing-mode: tb-rl;
+	writing-mode: vertical-rl;
+	*/
+}
+.convert-view > .vertical-row > .vertical-char {
+	border: none;
+	float: left;
+	clear: left;
+	transform: none;
+}
+.alternative-focus {
+	background-color: #99ccff;
+}
+.phrase-num{
+	display: none;
+}
+.input-buffer > .vertical-char.selectPhrase {
+	background-color: #ffff99;
+}
 .alphabet {
 	/* -ms-text-combine-horizontal: all; */
 	/* -webkit-text-combine: horizontal; */
 	/* text-combine-upright: all;        */
-	padding-left: 8px;
+	padding-left: 5px;
 	padding-bottom: 2px;
 }
 .input-buffer .alphabet{
@@ -379,6 +491,8 @@ menu[type="toolbar"] {
 }
 .input-buffer .vertical-char {
 	left: 0px;
+	transform:none;
+	float: right;
 }
 .input-buffer .vertical-dot {
 	left: 7px;
@@ -386,6 +500,12 @@ menu[type="toolbar"] {
 .input-buffer > .character-line {
 	border: none;
 	padding-top: 3px;
+}
+.input-buffer > .vertical-before-bracket {
+	transform: rotate(90deg);
+}
+.input-buffer > .vertical-after-bracket {
+	transform: rotate(90deg);
 }
 button {
 	display: table-cell;
@@ -402,58 +522,6 @@ button {
 }
 .data{
 	display: none;
-}
-.convert-view {
-	width: 180px;
-	z-index: 0;
-	position: fixed;
-}
-.convert-view[data-alternativeList="select"]{
-	z-index: 10;
-	background-color: grey;
-}
-.convert-view:before, .convert-view:after {
-	position: absolute;
-	content: "";
-	width: 100%;
-	height: 100%;
-}
-.convert-view:before {
-	top: 0;
-	left: 0;
-	z-index: -10;
-	/*
-	background: #f5f5f5;
-	*/
-}
-.convert-view:after {
-	top: 4px;
-	left: 4px;
-	z-index: -20;
-	background: rgba(0,0,0,0.2);
-	box-shadow: 4px 4px 0 0 rgba(0,0,0,0.2);
-	-moz-box-shadow: 4px 4px 0 0 rgba(0,0,0,0.2);
-	-webkit-box-shadow: 4px 4px 0 0 rgba(0,0,0,0.2);
-}
-.convert-view > .vertical-row {
-	border: none;
-	width: 30px;
-	float: right;
-	overflow: hidden;
-	/*
-	-webkit-writing-mode: vertical-rl;
-	-ms-writing-mode: tb-rl;
-	writing-mode: vertical-rl;
-	*/
-}
-.convert-view > .vertical-row > .vertical-char {
-	border: none;
-}
-.alternative-focus {
-	background-color: white;
-}
-#input_buffer > .vertical-char.selectPhrase {
-	background-color: yellow;
 }
 #file-list {
 /*
@@ -503,4 +571,20 @@ button {
 }
 .navbar-default {
 	height: 40px;
+}
+#find{
+	display: none;
+	position: fixed;
+	bottom: 30px;
+	left: 0px;
+	background-color: yellow;
+	width: 100%;
+	z-index: 20;
+}
+#find.active {
+	display: block;
+}
+.search-word {
+	color: white;
+	background-color: #33cc33;
 }
