--- a/tategaki.css
+++ b/tategaki.css
@@ -2,7 +2,7 @@ html,body {
 	/*background-color: #FFFACD;*/
 	background-color: rgba(245,245,245,.8);
 }
-h1#site-title {
+h1#site_title {
 	background-color: rgba(0,255,255,.8);
 	text-align: center;
 	position: fixed;
@@ -15,7 +15,7 @@ h1#site-title {
 	margin: 0 auto;
 	border-radius: 10px;
 }
-#file-title {
+#file_title {
 	background-color: #F0FFF0;
 	font-size: 20px;
 	position: relative;
@@ -26,6 +26,9 @@ h1#site-title {
 	border-color: rgba(255,127,80,.6);
 	display: block;
 }
+#command.active {
+	display: block;
+}
 #command {
 	position: fixed;
 	bottom: 0px;
@@ -33,8 +36,9 @@ h1#site-title {
 	width: 100%;
 	background-color: yellow;
 	z-index: 50;
+	display: none;
 }
-#app-container {
+#app_container {
 	/* background-color: rgba(165,42,42,.7); */
 	/* background-color: #FFFACD;            */
 	background-color: rgba(245,245,245,.8);
@@ -86,12 +90,12 @@ menu[type="toolbar"] {
 	left: 0px;
 	background-color: grey;
 }
-#vertical-draft {
+#vertical_draft {
 	border: 1px brown;
 	/*width: 85%;*/
 	/*max-width: 1400px;*/
 	cursor: vertical-text;
-	top: -15px;
+	top: -200px;
 	right: 0px;
 	background-color: white;
 	/*
@@ -115,9 +119,10 @@ menu[type="toolbar"] {
 	*/
 
 	/* height: 90%; */
-	height: 825px;
-	width: 1200px;
+	width: 825px;
+	height: 1200px;
 	position: relative;
+	transform: rotate(90deg);
 	/* display:table; */
 	/*
 	width: 90%;
@@ -135,7 +140,7 @@ menu[type="toolbar"] {
 	text-combine-upright: all;
 	*/
 }
-/* #vertical-draft {          */
+/* #vertical_draft {          */
 /* 	transform: rotate(90deg); */
 /* 	position: relative;       */
 /* 	top: 250px;               */
@@ -178,7 +183,7 @@ menu[type="toolbar"] {
 	/* float: right; */
 	/* display: table-cell; */
 	margin: auto 0;
-	width: 800px;
+	width: 730px;
 	height:25px;
 
 	/* transform: rotate(90deg); */
@@ -198,24 +203,24 @@ menu[type="toolbar"] {
 	/* clear: left; */
 	transform: rotate(-90deg);
 }
-#vertical-draft > .vertical-paragraph > .vertical-row {
+#vertical_draft > .vertical-paragraph > .vertical-row {
 	display: none;
 	overflow: visible;
 	white-space: nowrap;
 	border-left: 2px grey solid;
 	border-right: 2px grey solid;
 }
-#vertical-draft .vertical-char {
+#vertical_draft .vertical-char {
 	display: none;
 }
-#vertical-draft > .vertical-paragraph > .vertical-row.display-row {
+#vertical_draft > .vertical-paragraph > .vertical-row.display-row {
 	display: block;
-	transform:rotate(90deg);
+	/* transform:rotate(90deg); */
 }
-#vertical-draft .vertical-row > .vertical-char.display-char {
+#vertical_draft .vertical-row > .vertical-char.display-char {
 	display: inline-block;
 }
-#vertical-draft .EOL.vertical-char{
+#vertical_draft .EOL.vertical-char{
 	/* border: 1px gray dashed; */
 	/*
 	display: table-column;
@@ -274,12 +279,13 @@ menu[type="toolbar"] {
 .vertical-dot {
 	position: relative;
 	top: -10px;
-	right: -8px;
-	padding-left: 5px;
-	left: 10px;
+	right: 5px;
+	/* padding-left: 5px; */
+	/* left: 10px; */
 }
 .cursor.vertical-dot {
-	border-top: 1px yellowgreen dashed;
+	border-top: 1px rgba(0,0,0,0) dashed;
+	-webkit-animation-name: none;
 }
 .cursor.vertical-dot::before{
 	content: '';
@@ -289,6 +295,11 @@ menu[type="toolbar"] {
 	right: 5px;
 	width: 20px;
 	height: 5px;
+	-webkit-animation-name: blinking-cursor;
+	-webkit-animation-duration: 1s;
+	-webkit-animation-timing-function: linear;
+	-webkit-animation-delay: .1;
+	-webkit-animation-iteration-count: infinite;
 }
 .character-line {
 	transform: none;
@@ -352,7 +363,7 @@ menu[type="toolbar"] {
 	border-top: 1px rgba(0,0,0,0) dashed;
 	-webkit-animation-name: blinking-cursor-left;
 }
-#vertical-draft > .vertical-paragraph > .vertical-row:first-child {
+#vertical_draft > .vertical-paragraph > .vertical-row:first-child {
 }
 .vertical-row.page-break {
 	border-top: 2px grey solid;
@@ -360,7 +371,7 @@ menu[type="toolbar"] {
 .vertical-row.page-last-row {
 }
 .page-last-row + .page-break {
-	border-top: 1px rgba(0,0,0,0) solid;
+	/* border-top: 1px rgba(0,0,0,0) solid; */
 }
 .page-last-row {
 	/* border-left: 2px grey solid; */
@@ -369,7 +380,7 @@ menu[type="toolbar"] {
 	clear: right;
 	z-index: 10;
 }
-.input-buffer {
+#input_buffer {
 	/* color: blue; */
 	width: 20px;
 	position: fixed;
@@ -392,19 +403,19 @@ menu[type="toolbar"] {
 	text-combine-upright: all;
 	*/
 }
-.input-buffer:before, .input-buffer:after {
+#input_buffer:before, #input_buffer:after {
 	position: absolute;
 	content: "";
 	width: 100%;
 	height: 100%;
 }
-.input-buffer:before {
+#input_buffer:before {
 	top: 0;
 	left: 0;
 	z-index: -10;
 	background: #f5f5f5;
 }
-.input-buffer:after {
+#input_buffer:after {
 	top: 4px;
 	left: 4px;
 	z-index: -20;
@@ -413,14 +424,23 @@ menu[type="toolbar"] {
 	-moz-box-shadow: 4px 4px 0 0 rgba(0,0,0,0.2);
 	-webkit-box-shadow: 4px 4px 0 0 rgba(0,0,0,0.2);
 }
+#convert_container {
+	width: 180px;
+	position: fixed;
+	z-index: 10;
+}
 .convert-view {
 	/* background: rgba(0,0,0,.1); */
 	width: 180px;
-	z-index: 0;
-	position: fixed;
+	z-index: -10;
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	display: none;
 }
-.convert-view[data-alternativeList="select"]{
+.convert-view.select{
 	z-index: 10;
+	display: block;
 	/* background-color: grey; */
 }
 .convert-view:before, .convert-view:after {
@@ -469,7 +489,7 @@ menu[type="toolbar"] {
 .phrase-num{
 	display: none;
 }
-.input-buffer > .vertical-char.selectPhrase {
+#input_buffer > .vertical-char.selectPhrase {
 	background-color: #ffff99;
 }
 .alphabet {
@@ -479,32 +499,35 @@ menu[type="toolbar"] {
 	padding-left: 5px;
 	padding-bottom: 2px;
 }
-.input-buffer .alphabet{
+#input_buffer .alphabet{
 	padding-left: 5px;
 }
-.suzi {
-	padding-left: 6px;
+.number {
+	padding-left: 2px;
 }
 .yoin {
 	padding-left: 5px;
-	bottom: 5px;
+	/* bottom: 5px; */
 }
-.input-buffer .vertical-char {
+#input_buffer .vertical-char {
 	left: 0px;
 	transform:none;
 	float: right;
 }
-.input-buffer .vertical-dot {
+#input_buffer .vertical-dot {
 	left: 7px;
 }
-.input-buffer > .character-line {
+#input_buffer > .character-line {
 	border: none;
 	padding-top: 3px;
+	transform: rotate(90deg);
+	left: 3px;
+	top: 2px;
 }
-.input-buffer > .vertical-before-bracket {
+#input_buffer > .vertical-before-bracket {
 	transform: rotate(90deg);
 }
-.input-buffer > .vertical-after-bracket {
+#input_buffer > .vertical-after-bracket {
 	transform: rotate(90deg);
 }
 button {
@@ -523,7 +546,7 @@ button {
 .data{
 	display: none;
 }
-#file-list {
+#file_list {
 /*
 	position: absolute;
 	top: 0px;
@@ -536,7 +559,7 @@ button {
 	/*overflow: auto;*/
 */
 }
-#user-info {
+#user_info {
 	width: 400px;
 	height: 40px;
 }
@@ -545,28 +568,28 @@ button {
 }
 .modal-title-open {
 }
-#file-list-modal.command_modal .modal-title-open {
+#file_list_modal.command-modal .modal-title-open {
 	display: none;
 }
 .modal-title-command {
 	display: none;
 }
-#file-list-modal.command_modal .modal-title-command {
+#file_list_modal.command-modal .modal-title-command {
 	display: block;
 }
-#file-list-modal.command_modal .form-group {
+#file_list_modal.command-modal .form-group {
 	display: none;
 }
-#file-list-modal.command_modal .modal-dialog {
+#file_list_modal.command-modal .modal-dialog {
 	position: absolute;
 	bottom: 0px;
 }
-#file-list-modal.command_modal .modal-content {
+#file_list_modal.command-modal .modal-content {
 }
-#help-tabs > ul.tab-body {
+#help_tabs > ul.tab-body {
 	display: none;
 }
-#help-tabs > ul.tab-body.current-tab{
+#help_tabs > ul.tab-body.current-tab{
 	display: block;
 }
 .navbar-default {
@@ -584,7 +607,7 @@ button {
 #find.active {
 	display: block;
 }
-.search-word {
+.find-word {
 	color: white;
 	background-color: #33cc33;
 }
