--- a/tategaki.css
+++ b/tategaki.css
@@ -86,7 +86,7 @@ menu[type="toolbar"] {
 	left: 0px;
 	background-color: grey;
 }
-#vertical_draft {
+#sentence_container {
 	border: 1px brown;
 	cursor: vertical-text;
 	top: -200px;
@@ -106,10 +106,10 @@ menu[type="toolbar"] {
 	position: relative;
 	transform: rotate(90deg);
 }
-.vertical-paragraph {
+.paragraph {
 	overflow: visible;
 }
-.vertical-paragraph > .vertical-row:last-child::after {
+.paragraph > .row:last-child::after {
 	content: '↓';
 	position: relative;
 	color: grey;
@@ -122,7 +122,7 @@ menu[type="toolbar"] {
 	bottom: 2px;
 	padding-left: 4px;
 }
-.vertical-row {
+.row {
 	border: 1px gray dashed;
 	position: relative;
 	color: black;
@@ -133,31 +133,31 @@ menu[type="toolbar"] {
 	height: auto;
 
 }
-.vertical-char {
+.char {
 	border: 1px rgba(0,0,0,0) dashed;
 	position: relative;
 	transform: rotate(-90deg);
 	vertical-align: middle;
 	bottom: 2px;
 }
-#vertical_draft > .vertical-paragraph > .vertical-row {
+#sentence_container > .paragraph > .row {
 	display: none;
 	overflow: visible;
 	white-space: nowrap;
 	border-left: 2px grey solid;
 	border-right: 2px grey solid;
 }
-#vertical_draft .vertical-char {
+#sentence_container .char {
 	display: none;
 	line-height: 15px;
 }
-#vertical_draft > .vertical-paragraph > .vertical-row.display-row {
+#sentence_container > .paragraph > .row.display {
 	display: block;
 }
-#vertical_draft .vertical-row > .vertical-char.display-char {
+#sentence_container .row > .char.display {
 	display: inline-block;
 }
-#vertical_draft .EOL.vertical-char {
+#sentence_container .EOL.char {
 	width: 20px;
 	height: 20px;
 }
@@ -253,9 +253,9 @@ menu[type="toolbar"] {
 	border-top: 1px rgba(0,0,0,0) dashed;
 	-webkit-animation-name: blinking-cursor-left;
 }
-#vertical_draft > .vertical-paragraph > .vertical-row:first-child {
+#sentence_container > .paragraph > .row:first-child {
 }
-.vertical-row.page-break {
+.row.page-break {
 	border-top: 2px grey solid;
 }
 #input_buffer {
@@ -325,26 +325,26 @@ menu[type="toolbar"] {
 	-moz-box-shadow: 4px 4px 0 0 rgba(0,0,0,0.2);
 	-webkit-box-shadow: 4px 4px 0 0 rgba(0,0,0,0.2);
 }
-.convert-view > .vertical-row {
+.convert-view > .row {
 	border: none;
 	float: right;
 	overflow: hidden;
 	height: auto;
 	width: auto;
 }
-.convert-view > .vertical-row > .vertical-char {
+.convert-view > .row > .char {
 	border: none;
 	float: left;
 	clear: left;
 	transform: none;
 }
-.convert-view.active > .vertical-row.select {
+.convert-view.active > .row.select {
 	background-color: #99ccff;
 }
 .phrase-num{
 	display: none;
 }
-#input_buffer > .vertical-char.select-phrase {
+#input_buffer > .char.select-phrase {
 	background-color: #ffff99;
 }
 .alphabet {
@@ -360,7 +360,7 @@ menu[type="toolbar"] {
 .yoin {
 	padding-left: 4px;
 }
-#input_buffer .vertical-char {
+#input_buffer .char {
 	left: 0px;
 	transform:none;
 	float: right;
