--- a/tategaki-character-decolation.css
+++ b/tategaki-character-decolation.css
@@ -7,7 +7,17 @@ span.decolation-color-red {
 span.decolation-color-blue {
 	color: blue;
 }
-.char[data-font-size="auto"] {
+.char[data-font-size="8"] {
+	font-size: 8px;
+	height: 8px;
+	width: 8px;
+}
+.char[data-font-size="14"] {
+	font-size: 14px;
+	height: 14px;
+	width: 14px;
+}
+.char[data-font-size="auto"],.char[data-font-size="18"] {
 	font-size: 18px;
 	height: 18px;
 	width: 18px;
